Cleaned up code in queries.js, added min-width in the reviewdocumentssidepanel css to fix storybook alignment issue

--- a/src/components/Office/PPM/ReviewDocumentsSidePanel/ReviewDocumentsSidePanel.module.scss
+++ b/src/components/Office/PPM/ReviewDocumentsSidePanel/ReviewDocumentsSidePanel.module.scss
@@ -44,6 +44,7 @@
       @include u-margin-bottom(0);
       font-weight: normal;
       width: 220px;
+      min-width: 184px;
     }
 
     span {
